--- a/apps/web/package.json
+++ b/apps/web/package.json
@@ -9,6 +9,7 @@
     "serve": "vite preview",
     "start": "vite",
     "check-types": "tsc --noEmit",
+    "test:e2e": "playwright test",
     "generate-pwa-assets": "pwa-assets-generator"
   },
   "dependencies": {
@@ -37,6 +38,7 @@
     "better-auth": "^1.3.4"
   },
   "devDependencies": {
+    "@playwright/test": "^1.46.1",
     "@tanstack/react-router-devtools": "^1.114.27",
     "@tanstack/router-plugin": "^1.114.27",
     "@types/node": "^22.13.13",
