fix(dev): switch to @electric-sql/pglite and update import

--- a/apps/server/package.json
+++ b/apps/server/package.json
@@ -14,7 +14,7 @@
     "db:migrate": "drizzle-kit migrate"
   },
   "dependencies": {
-    "pglite": "^0.2.11",
+    "@electric-sql/pglite": "^0.2.11",
     "dotenv": "^17.2.1",
     "zod": "^4.0.2",
     "@orpc/server": "^1.5.0",
