--- a/apps/web/package.json
+++ b/apps/web/package.json
@@ -43,8 +43,7 @@
     "sonner": "^2.0.5",
     "tailwind-merge": "^3.3.1",
     "tw-animate-css": "^1.2.5",
-    "vite-plugin-pwa": "^1.0.1",
-    "zod": "^4.0.2"
+    "vite-plugin-pwa": "^1.0.1"
   },
   "devDependencies": {
     "@playwright/test": "^1.46.1",
