--- a/apps/server/package.json
+++ b/apps/server/package.json
@@ -11,7 +11,15 @@
     "db:push": "drizzle-kit push",
     "db:studio": "drizzle-kit studio",
     "db:generate": "drizzle-kit generate",
-    "db:migrate": "drizzle-kit migrate"
+    "db:migrate": "drizzle-kit migrate",
+    "migrations:generate": "drizzle-migrations generate --name init",
+    "migrations:up": "drizzle-migrations up",
+    "migrations:down": "drizzle-migrations down",
+    "migrations:status": "drizzle-migrations status",
+    "migrations:refresh": "drizzle-migrations refresh",
+    "migrations:fresh": "drizzle-migrations fresh",
+    "seed:create": "drizzle-migrations seed:create --name seed",
+    "seed:run": "drizzle-migrations seed:run"
   },
   "dependencies": {
     "@ai-sdk/google": "^1.2.3",
@@ -37,6 +45,7 @@
     "typescript": "^5.8.2",
     "@types/bun": "^1.2.6",
     "drizzle-kit": "^0.31.2",
-    "@types/pg": "^8.11.11"
+    "@types/pg": "^8.11.11",
+    "@drepkovsky/drizzle-migrations": "github:drepkovsky/drizzle-migrations"
   }
 }
