--- a/apps/server/.env.example
+++ b/apps/server/.env.example
@@ -22,6 +22,7 @@ CORS_ORIGIN=http://localhost:8302
 
 # Authentication token for AI agents
 # This token must be shared with your AI agents (Claude Code, Windsurf, etc.)
+# Also used for MCP auth
 # Generate with: openssl rand -hex 32
 AGENT_AUTH_TOKEN=
 
