--- a/apps/server/package.json
+++ b/apps/server/package.json
@@ -43,6 +43,7 @@
     "@openauthjs/openauth": "^0.4.3",
     "@orpc/client": "^1.5.0",
     "@orpc/server": "^1.5.0",
+    "@modelcontextprotocol/sdk": "^1.17.2",
     "ai": "^4.3.16",
     "dotenv": "^17.2.1",
     "drizzle-orm": "^0.44.2",
