--- a/apps/server/.env.example
+++ b/apps/server/.env.example
@@ -7,7 +7,7 @@ PORT=8500
 DATABASE_URL=postgresql://postgres:password@localhost:5432/solo_unicorn
 
 # Claude Code Integration
-CLAUDE_CODE_URL=ws://localhost:8888
+CLAUDE_CODE_WS_URL=ws://localhost:8501
 AGENT_AUTH_TOKEN=your-secure-agent-token-here
 
 # CORS Configuration
