--- a/apps/server/.env.example
+++ b/apps/server/.env.example
@@ -10,8 +10,7 @@ DATABASE_URL=postgresql://postgres:password@localhost:5432/solo_unicorn
 CLAUDE_CODE_WS_URL=ws://localhost:8501
 AGENT_AUTH_TOKEN=your-secure-agent-token-here
 
-# MCP Server Configuration
-MCP_PORT=8502
+# MCP Server is now integrated into the main server on PORT (8500)
 
 # CORS Configuration
 CORS_ORIGIN=http://localhost:8302
