--- a/apps/server/package.json
+++ b/apps/server/package.json
@@ -47,7 +47,7 @@
     "ai": "^4.3.16",
     "dotenv": "^17.2.1",
     "drizzle-orm": "^0.44.2",
-    "express": "^5.1.0",
+    "fetch-to-node": "^2.1.0",
     "hono": "^4.8.2",
     "jsonwebtoken": "^9.0.2",
     "openai": "^5.12.2",
@@ -62,7 +62,6 @@
   "devDependencies": {
     "@drepkovsky/drizzle-migrations": "github:drepkovsky/drizzle-migrations",
     "@types/bun": "^1.2.6",
-    "@types/express": "^5.0.3",
     "@types/jsonwebtoken": "^9.0.10",
     "@types/pg": "^8.11.11",
     "@types/ws": "^8.18.1",
