--- a/apps/server/package.json
+++ b/apps/server/package.json
@@ -53,6 +53,7 @@
     "pg": "^8.14.1",
     "valibot": "^1.1.0",
     "ws": "^8.18.3",
+    "cross-spawn": "^7.0.6",
     "zod": "^3.23.8"
   },
   "trustedDependencies": [
@@ -64,6 +65,7 @@
     "@types/jsonwebtoken": "^9.0.10",
     "@types/pg": "^8.11.11",
     "@types/ws": "^8.18.1",
+    "@types/cross-spawn": "^6.0.6",
     "drizzle-kit": "^0.31.2",
     "tsdown": "^0.12.9",
     "typescript": "^5.8.2"
