--- a/apps/server/package.json
+++ b/apps/server/package.json
@@ -6,7 +6,7 @@
     "build": "tsdown",
     "typecheck": "tsc -b",
     "compile": "bun build --compile --minify --sourcemap --bytecode ./src/index.ts --outfile server",
-    "dev": "bun --hot run src/index.ts",
+    "dev": "HOT_RELOAD=true bun --hot run src/index.ts",
     "start": "bun run src/index.ts",
     "test": "NODE_ENV=test bun test",
     "test:watch": "NODE_ENV=test bun test --watch",
