--- a/package.json
+++ b/package.json
@@ -20,6 +20,8 @@
     "aws-sso": "aws sso login --sso-session=monster-make",
     "sst:prod": "bun sst --stage production",
     "sst:alpha": "bun sst --stage alpha",
+    "lint": "eslint .",
+    "lint:fix": "eslint --fix .",
     "postinstall": "bun sst install"
   },
   "dependencies": {
@@ -27,6 +29,14 @@
   },
   "devDependencies": {
     "@types/aws-lambda": "8.10.152",
+    "@tanstack/eslint-plugin-query": "^5.83.1",
+    "@tanstack/eslint-plugin-router": "1.131.2",
+    "@stylistic/eslint-plugin": "^5.3.1",
+    "@eslint/markdown": "^7.2.0",
+    "@seahax/eslint-plugin-wrap": "^0.6.8",
+    "eslint": "^9.34.0",
+    "eslint-plugin-react-hooks": "^6.0.0-rc.1",
+    "@typescript-eslint/parser": "^8.42.0",
     "concurrently": "^9.2.1",
     "sst": "3.17.12"
   }
