--- a/apps/web/.env.example
+++ b/apps/web/.env.example
@@ -2,3 +2,4 @@
 # Production and Alpha (staging) is using ./env.ts and /sst.config.ts with SST V3 secrets
 
 VITE_SERVER_URL=http://localhost:3500
+VITE_WEB_URL=http://localhost:8888
