--- a/apps/web/package.json
+++ b/apps/web/package.json
@@ -4,11 +4,11 @@
 	"private": true,
 	"type": "module",
 	"scripts": {
-		"dev": "vite --port=3001",
+		"dev": "vite --host",
 		"build": "vite build",
 		"serve": "vite preview",
 		"start": "vite",
-		"check-types": "tsc --noEmit",
+		"typecheck": "tsc --noEmit",
 		"generate-pwa-assets": "pwa-assets-generator"
 	},
 	"dependencies": {
@@ -40,7 +40,6 @@
 		"@types/react-dom": "^19.0.4",
 		"@vitejs/plugin-react": "^4.3.4",
 		"postcss": "^8.5.3",
-		"typescript": "^5.8.3",
 		"tailwindcss": "^4.0.15",
 		"vite": "^6.2.2",
 		"@tanstack/react-query-devtools": "^5.85.5",
