--- a/package.json
+++ b/package.json
@@ -7,13 +7,15 @@
   ],
   "scripts": {
     "build": "bun run --filter '*' build",
-    "db:generate": "bun run --elide-lines 0 --filter server db:generate",
-    "db:migrate": "bun run --elide-lines 0 --filter server db:migrate",
-    "db:push": "bun run --elide-lines 0 --filter server db:push",
-    "db:studio": "bun run --elide-lines 0 --filter server db:studio",
+    "server:run": "bun --elide-lines 0 --filter solo-unicorn-server ",
+    "db:migrate:generate": "server:run db:migrate:generate --name ",
+    "db:migrate:up": "server:run db:migrate:up",
+    "db:migrate:down": "server:run db:migrate:down",
+    "db:push": "server:run db:push",
+    "db:studio": "server:run db:studio",
     "dev": "concurrently --prefix '[{name}]' --names 'server,web' --prefix-colors 'cyan,magenta' 'cd apps/server && bun dev' 'cd apps/web && bun dev'",
     "dev:native": "bun run --filter native dev",
-    "dev:server": "bun run --filter server dev",
+    "dev:server": "bun run --filter solo-unicorn-server dev",
     "dev:web": "bun run --filter web dev",
     "typecheck": "concurrently 'cd apps/server && bun typecheck' 'cd apps/web && bun typecheck'",
     "setup-awscli": "bin/merge-awscli-config.sh",
