--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "aws-sso": "aws sso login --sso-session=monster-make",
     "sst:prod": "bun sst --stage production",
     "sst:alpha": "bun sst --stage alpha",
+    "agent:rules:apply": "bun ruler apply --nested --agents qwen",
     "lint": "eslint .",
     "lint:fix": "eslint --fix .",
     "postinstall": "bun sst install"
@@ -39,6 +40,7 @@
     "concurrently": "^9.2.1",
     "eslint": "^9.34.0",
     "eslint-plugin-react-hooks": "^6.0.0-rc.1",
+    "shadcn": "^3.2.1",
     "sst": "3.17.12",
     "typescript": "5.9.2"
   }
