--- a/package.json
+++ b/package.json
@@ -23,7 +23,7 @@
     "agent:rules:apply": "bun ruler apply --nested --agents qwen,cursor",
     "lint": "eslint .",
     "lint:fix": "eslint --fix .",
-    "postinstall": "bun sst install && bun agent:rules:apply"
+    "postinstall": "bun sst install --print-logs && bun agent:rules:apply"
   },
   "dependencies": {
     "ts-pattern": "^5.8.0"
@@ -42,7 +42,7 @@
     "eslint": "^9.34.0",
     "eslint-plugin-react-hooks": "^6.0.0-rc.1",
     "shadcn": "^3.2.1",
-    "sst": "3.17.12",
+    "sst": "^3.17.12",
     "typescript": "5.9.2"
   }
 }
